app-code/prowlarr/prowlarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: atlantis

      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          ports:
            - containerPort: 9696
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-svc
  namespace: media
spec:
  selector:
    app: prowlarr
  type: NodePort
  ports:
    - name: http
      port: 9696
      targetPort: 9696
      nodePort: 30396
