app-code/prowlarr/prowlarr-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingress
  namespace: media
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`prowlarr.nexus.link`)
      kind: Rule
      middlewares: [{name: authentik-forwardauth, namespace: media}]
      services: [{name: prowlarr-svc, port: 9696}]
